# algo

./: .gitignore  README.md
autogradient/: autogradient.h  costs.h  extra.h  sgd.cpp
cuckoo-set/: cockoo_set.h  cuckoo_set.cpp  cuckoo_set_test.cpp
cyclic-vector/: cyclic_vector.h  cyclic_vector_test.cpp
fraction/: demo.cpp  fraction.h
geometry/: a.cpp  area.cpp  b.cpp  c.cpp  convex_hull.cpp  d.cpp  d2.cpp  e.cpp  line.h  polygon.cpp  polygon.h  vec2.h  vec2d.h  vecnd.h
hash/: hash.cpp  hash.h
heap/: heap.h
io/: io.cpp  io.h
kheap/: demo.cpp  kheap.cpp  test.in
kth/: Heap.h  TTopElements.h  main.cpp  qSortKthCut.h  stress.cpp
link-cut-max-flow/: README.md  linkcutflowblocker.cpp  linkcutflowblocker.h  maxflowtest.cpp
magic/: fibonacci_compile.cpp
ray-tracing/: CMakeLists.txt  beamtracer.cpp  beamtracer.h  camera.cpp  camera.h  main.cpp  run.sh  scene.cpp  scene.h  settings.cpp  settings.h  threadpool.h
ray-tracing/color/: color.h
ray-tracing/containers/: figurelist.cpp  figurelist.h  kdtree.cpp  kdtree.h
ray-tracing/figure/: box.cpp  box.h  figure3d.h  plane.h  planelike.h  shape.cpp  shape.h  sphere.h  traits.h
ray-tracing/lights/: light.cpp  light.h  lightsource.h
ray-tracing/new/: kd.h
ray-tracing/reader/: reader.cpp  reader.h
ray-tracing/screen/: rgb.cpp  rgb.h  screen.cpp  screen.h
ray-tracing/tests/: plane.rt  reflection.rt  refraction.rt  sphere.rt  star.stl  test.rt  three_planes.rt
ray-tracing/utils/: geom.cpp  geom.h  line3d.cpp  line3d.h  numeric.cpp  numeric.h  polygon2d.h  vec2d.cpp  vec2d.h  vec3d.cpp  vec3d.h
(+79 files in other folders)
